[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3ac"
version = "0.0.3"
authors = [
    { name="Seth Widoff", email="swidoff@gmail.com" },
]
description = "Autocomplete s3 URIs in IPython."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["boto3"]

[tool.hatch.build]
include = ["*.py"]
exclude = ["/tests/", ".gitignore", "pyproject.toml"]

[project.urls]
"Homepage" = "https://github.com/swidoff/s3ac"
"Bug Tracker" = "https://github.com/swidoff/s3ac/issues"

[tool.hatch.envs.test]
dependencies = ["pytest", "moto", "ipython"]

[tool.black]
line-length = 120
